// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon component should concat Bulma class with classes in props 1`] = `
<DocumentFragment>
  <span
    class="icon other-class"
  >
    <i
      class="mdi mdi-bars"
    />
  </span>
</DocumentFragment>
`;

exports[`Icon component should have box classname 1`] = `
<DocumentFragment>
  <span
    class="icon"
  >
    <i
      class="mdi mdi-bars"
    />
  </span>
</DocumentFragment>
`;
